base/apps/john2143-com/ingress.yaml
# john2143-com Ingress
# Wave 6
# Domain: john2143.9s.pics
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: john2143-com
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: traefik-crowdsec-protected@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - john2143.9s.pics
      secretName: john2143-9s-pics-tls
  rules:
    - host: john2143.9s.pics
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: john2143-com
                port:
                  number: 80
